--- a/config/database.yml
+++ b/config/database.yml
@@ -17,7 +17,7 @@ test:
 production:
   adapter: mysql
   encoding: utf8
-  host: 192.168.1.10
+  host: localhost
   database: kiris2_production
   pool: 5
   username: kiris2
