Added required field logic to food input and food model

--- a/config/development.sphinx.conf
+++ b/config/development.sphinx.conf
@@ -51,10 +51,11 @@ source food_core_0
   sql_user = kiris2
   sql_pass = abc123
   sql_db = kiris2_development
+  sql_query_pre = UPDATE `foods` SET `delta` = 0 WHERE `delta` = 1
   sql_query_pre = SET NAMES utf8
   sql_query_pre = SET TIME_ZONE = '+0:00'
-  sql_query = SELECT SQL_NO_CACHE `foods`.`id` * CAST(5 AS SIGNED) + 1 AS `id` , `foods`.`name` AS `name`, `companies`.`name` AS `company_name`, GROUP_CONCAT(DISTINCT IFNULL(`products`.`name`, '0') SEPARATOR ' ') AS `product_name`, GROUP_CONCAT(DISTINCT IFNULL(`nutrients`.`name`, '0') SEPARATOR ' ') AS `nutrient_name`, `food_groups`.`id` AS `food_group_id`, `food_groups`.`name` AS `food_group_name`, `foods`.`id` AS `sphinx_internal_id`, 0 AS `sphinx_deleted`, 1946846921 AS `class_crc`, IFNULL('Food', '') AS `sphinx_internal_class`, IFNULL(`foods`.`name`, '') AS `name_sort`, IFNULL(`companies`.`name`, '') AS `company_name_sort`, GROUP_CONCAT(DISTINCT IFNULL(IFNULL(`products`.`name`, ''), '0') SEPARATOR ' ') AS `product_name_sort`, GROUP_CONCAT(DISTINCT IFNULL(IFNULL(`nutrients`.`name`, ''), '0') SEPARATOR ' ') AS `nutrient_name_sort`, IFNULL(`food_groups`.`id`, '') AS `food_group_id_sort`, IFNULL(`food_groups`.`name`, '') AS `food_group_name_sort`, `foods`.`unit_id` AS `unit_id`, UNIX_TIMESTAMP(`foods`.`created_at`) AS `created_at`, `foods`.`calories` AS `calories`, `foods`.`fat_calories` AS `fat_calories` FROM `foods` LEFT OUTER JOIN `companies` ON `companies`.`id` = `foods`.`company_id` LEFT OUTER JOIN `products` ON `products`.`food_id` = `foods`.`id` LEFT OUTER JOIN `food_nutrients` ON `food_nutrients`.`food_id` = `foods`.`id` LEFT OUTER JOIN `nutrients` ON `nutrients`.`id` = `food_nutrients`.`nutrient_id` LEFT OUTER JOIN `food_groups` ON `food_groups`.`id` = `foods`.`food_group_id` WHERE (`foods`.`id` >= $start AND `foods`.`id` <= $end) GROUP BY `foods`.`id` ORDER BY NULL
-  sql_query_range = SELECT IFNULL(MIN(`id`), 1), IFNULL(MAX(`id`), 1) FROM `foods` 
+  sql_query = SELECT SQL_NO_CACHE `foods`.`id` * CAST(5 AS SIGNED) + 1 AS `id` , `foods`.`name` AS `name`, `companies`.`name` AS `company_name`, GROUP_CONCAT(DISTINCT IFNULL(`products`.`name`, '0') SEPARATOR ' ') AS `product_name`, GROUP_CONCAT(DISTINCT IFNULL(`nutrients`.`name`, '0') SEPARATOR ' ') AS `nutrient_name`, `food_groups`.`id` AS `food_group_id`, `food_groups`.`name` AS `food_group_name`, `foods`.`id` AS `sphinx_internal_id`, 0 AS `sphinx_deleted`, 1946846921 AS `class_crc`, IFNULL('Food', '') AS `sphinx_internal_class`, IFNULL(`foods`.`name`, '') AS `name_sort`, IFNULL(`companies`.`name`, '') AS `company_name_sort`, GROUP_CONCAT(DISTINCT IFNULL(IFNULL(`products`.`name`, ''), '0') SEPARATOR ' ') AS `product_name_sort`, GROUP_CONCAT(DISTINCT IFNULL(IFNULL(`nutrients`.`name`, ''), '0') SEPARATOR ' ') AS `nutrient_name_sort`, IFNULL(`food_groups`.`id`, '') AS `food_group_id_sort`, IFNULL(`food_groups`.`name`, '') AS `food_group_name_sort`, `foods`.`unit_id` AS `unit_id`, UNIX_TIMESTAMP(`foods`.`created_at`) AS `created_at`, `foods`.`calories` AS `calories`, `foods`.`fat_calories` AS `fat_calories` FROM `foods` LEFT OUTER JOIN `companies` ON `companies`.`id` = `foods`.`company_id` LEFT OUTER JOIN `products` ON `products`.`food_id` = `foods`.`id` LEFT OUTER JOIN `food_nutrients` ON `food_nutrients`.`food_id` = `foods`.`id` LEFT OUTER JOIN `nutrients` ON `nutrients`.`id` = `food_nutrients`.`nutrient_id` LEFT OUTER JOIN `food_groups` ON `food_groups`.`id` = `foods`.`food_group_id` WHERE (`foods`.`id` >= $start AND `foods`.`id` <= $end AND `foods`.`delta` = 0) GROUP BY `foods`.`id` ORDER BY NULL
+  sql_query_range = SELECT IFNULL(MIN(`id`), 1), IFNULL(MAX(`id`), 1) FROM `foods` WHERE `foods`.`delta` = 0
   sql_attr_uint = sphinx_internal_id
   sql_attr_uint = sphinx_deleted
   sql_attr_uint = class_crc
@@ -81,9 +82,45 @@ index food_core
   enable_star = 1
 }
 
+source food_delta_0 : food_core_0
+{
+  type = mysql
+  sql_host = 192.168.1.10
+  sql_user = kiris2
+  sql_pass = abc123
+  sql_db = kiris2_development
+  sql_query_pre = 
+  sql_query_pre = SET NAMES utf8
+  sql_query_pre = SET TIME_ZONE = '+0:00'
+  sql_query = SELECT SQL_NO_CACHE `foods`.`id` * CAST(5 AS SIGNED) + 1 AS `id` , `foods`.`name` AS `name`, `companies`.`name` AS `company_name`, GROUP_CONCAT(DISTINCT IFNULL(`products`.`name`, '0') SEPARATOR ' ') AS `product_name`, GROUP_CONCAT(DISTINCT IFNULL(`nutrients`.`name`, '0') SEPARATOR ' ') AS `nutrient_name`, `food_groups`.`id` AS `food_group_id`, `food_groups`.`name` AS `food_group_name`, `foods`.`id` AS `sphinx_internal_id`, 0 AS `sphinx_deleted`, 1946846921 AS `class_crc`, IFNULL('Food', '') AS `sphinx_internal_class`, IFNULL(`foods`.`name`, '') AS `name_sort`, IFNULL(`companies`.`name`, '') AS `company_name_sort`, GROUP_CONCAT(DISTINCT IFNULL(IFNULL(`products`.`name`, ''), '0') SEPARATOR ' ') AS `product_name_sort`, GROUP_CONCAT(DISTINCT IFNULL(IFNULL(`nutrients`.`name`, ''), '0') SEPARATOR ' ') AS `nutrient_name_sort`, IFNULL(`food_groups`.`id`, '') AS `food_group_id_sort`, IFNULL(`food_groups`.`name`, '') AS `food_group_name_sort`, `foods`.`unit_id` AS `unit_id`, UNIX_TIMESTAMP(`foods`.`created_at`) AS `created_at`, `foods`.`calories` AS `calories`, `foods`.`fat_calories` AS `fat_calories` FROM `foods` LEFT OUTER JOIN `companies` ON `companies`.`id` = `foods`.`company_id` LEFT OUTER JOIN `products` ON `products`.`food_id` = `foods`.`id` LEFT OUTER JOIN `food_nutrients` ON `food_nutrients`.`food_id` = `foods`.`id` LEFT OUTER JOIN `nutrients` ON `nutrients`.`id` = `food_nutrients`.`nutrient_id` LEFT OUTER JOIN `food_groups` ON `food_groups`.`id` = `foods`.`food_group_id` WHERE (`foods`.`id` >= $start AND `foods`.`id` <= $end AND `foods`.`delta` = 1) GROUP BY `foods`.`id` ORDER BY NULL
+  sql_query_range = SELECT IFNULL(MIN(`id`), 1), IFNULL(MAX(`id`), 1) FROM `foods` WHERE `foods`.`delta` = 1
+  sql_attr_uint = sphinx_internal_id
+  sql_attr_uint = sphinx_deleted
+  sql_attr_uint = class_crc
+  sql_attr_uint = unit_id
+  sql_attr_timestamp = created_at
+  sql_attr_float = calories
+  sql_attr_float = fat_calories
+  sql_attr_string = sphinx_internal_class
+  sql_attr_string = name_sort
+  sql_attr_string = company_name_sort
+  sql_attr_string = product_name_sort
+  sql_attr_string = nutrient_name_sort
+  sql_attr_string = food_group_id_sort
+  sql_attr_string = food_group_name_sort
+  sql_query_info = SELECT * FROM `foods` WHERE `id` = (($id - 1) / 5)
+}
+
+index food_delta : food_core
+{
+  source = food_delta_0
+  path = /var/www/kiris/db/sphinx/development/food_delta
+}
+
 index food
 {
   type = distributed
+  local = food_delta
   local = food_core
 }
 
